--- a/tutorials/simple_example.ipynb
+++ b/tutorials/simple_example.ipynb
@@ -2,91 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/camilo/dev/tpot_clustering_light/tpot/builtins/__init__.py:36: UserWarning: Warning: optional dependency `torch` is not available. - skipping import of NN models.\n",
-      "  warnings.warn(\"Warning: optional dependency `torch` is not available. - skipping import of NN models.\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "is_classifier\n",
-      "is_regressor\n",
-      "is_classifier\n",
-      "is_regressor\n",
-      "is_classifier\n",
-      "is_regressor\n",
-      "is_classifier\n",
-      "is_regressor\n",
-      "is_classifier\n",
-      "is_regressor\n",
-      "is_classifier\n",
-      "is_regressor\n",
-      "is_classifier\n",
-      "is_regressor\n",
-      "is_classifier\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/camilo/miniconda3/envs/tpot_clustering/lib/python3.10/site-packages/sklearn/base.py:1230: FutureWarning: passing a class to None is deprecated and will be removed in 1.8. Use an instance of the class instead.\n",
-      "  warnings.warn(\n",
-      "/home/camilo/miniconda3/envs/tpot_clustering/lib/python3.10/site-packages/sklearn/base.py:1270: FutureWarning: passing a class to None is deprecated and will be removed in 1.8. Use an instance of the class instead.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "is_regressor\n",
-      "is_classifier\n",
-      "is_regressor\n",
-      "is_classifier\n",
-      "is_regressor\n",
-      "is_classifier\n",
-      "is_regressor\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Version 0.12.2 of tpot is outdated. Version 1.0.0 was released Wednesday February 26, 2025.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                                                            \n",
-      "Generation 1 - Current best internal CV score: 0.7072801240568757\n",
-      "                                                                            \n",
-      "Generation 2 - Current best internal CV score: 0.7072801240568757\n",
-      "                                                                            \n",
-      "Generation 3 - Current best internal CV score: 0.7072801240568757\n",
-      "                                                                            \n",
-      "Generation 4 - Current best internal CV score: 0.7072801240568757\n",
-      "                                                                            \n",
-      "Generation 5 - Current best internal CV score: 0.7072801240568757\n",
-      "                                                                            \n",
-      "Best pipeline: KMeans(input_matrix, init=random, n_clusters=2)\n",
-      "0.6972646156059464\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tpotclustering'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtpotclustering\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m TPOTClustering\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdatasets\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load_breast_cancer\n\u001b[1;32m      4\u001b[0m data \u001b[38;5;241m=\u001b[39m load_breast_cancer()\u001b[38;5;241m.\u001b[39mdata\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tpotclustering'"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "from tpot import TPOTClustering\n",
+    "from tpotclustering import TPOTClustering\n",
     "from sklearn.datasets import load_breast_cancer\n",
     "\n",
     "data = load_breast_cancer().data\n",
@@ -101,7 +33,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tpot_clustering",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -115,7 +47,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
