--- a/tutorials/simple_example.ipynb
+++ b/tutorials/simple_example.ipynb
@@ -2,45 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "is_classifier\n",
-      "is_regressor\n",
-      "is_classifier\n",
-      "is_regressor\n",
-      "is_classifier\n",
-      "is_regressor\n",
-      "is_classifier\n",
-      "is_regressor\n",
-      "is_classifier\n",
-      "is_regressor\n",
-      "is_classifier\n",
-      "is_regressor\n",
-      "is_classifier\n",
-      "is_regressor\n",
-      "is_classifier\n",
-      "is_regressor\n",
-      "is_classifier\n",
-      "is_regressor\n",
-      "is_classifier\n",
-      "is_regressor\n",
-      "is_classifier\n",
-      "is_regressor\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/barbon/.local/lib/python3.10/site-packages/sklearn/base.py:1230: FutureWarning: passing a class to None is deprecated and will be removed in 1.8. Use an instance of the class instead.\n",
-      "  warnings.warn(\n",
-      "/home/barbon/.local/lib/python3.10/site-packages/sklearn/base.py:1270: FutureWarning: passing a class to None is deprecated and will be removed in 1.8. Use an instance of the class instead.\n",
-      "  warnings.warn(\n",
       "Version 0.1 of tpot is outdated. Version 1.0.0 was released Wednesday February 26, 2025.\n"
      ]
     },
@@ -49,18 +17,12 @@
      "output_type": "stream",
      "text": [
       "                                                                            \n",
-      "Generation 1 - Current best internal CV score: 0.7072801240568757\n",
+      "Generation 1 - Current best internal CV score: 0.8427159447547743\n",
       "                                                                            \n",
-      "Generation 2 - Current best internal CV score: 0.7072801240568757\n",
+      "Generation 2 - Current best internal CV score: 0.8427159447547743\n",
       "                                                                            \n",
-      "Generation 3 - Current best internal CV score: 0.7072801240568757\n",
-      "                                                                            \n",
-      "Generation 4 - Current best internal CV score: 0.7072801240568757\n",
-      "                                                                            \n",
-      "Generation 5 - Current best internal CV score: 0.7072801240568757\n",
-      "                                                                            \n",
-      "Best pipeline: KMeans(input_matrix, init=random, n_clusters=2)\n",
-      "0.6972646156059464\n"
+      "Generation 3 - Current best internal CV score: 0.8427159447547743\n",
+      "Optimization Progress:  67%|██████▋   | 40/60 [00:04<00:01, 11.87pipeline/s]"
      ]
     }
    ],
